modifications for index.html and style.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
     <title> Webtech Lab</title>
-<link rel="stylesheet" media="screen" href="style.css" />    
+<link rel="stylesheet" media="screen" href="style.css" /> 
+<script type="text/javascript" src="script.js" />  
 </head>    
     <body>
         <div id="navBar">
@@ -12,16 +13,21 @@
                 <div id="logo">
                     <img src  ="contents/logo.jpg" alt="LOGOSTELA" width= 200 height = 200>  
                 </div>
-                <li><a href="#home"> Home </a></li>
-                <li><a href="#menu1"> Menu1 </a></li>
-                <li><a href="#menu2"> Menu2 </a></li>
-                <li><a href="#menu3"> Menu3 </a></li>
+				<li><a href="#home">Home</a></li>
+				<li><a href="#news">News</a></li>
+				<li><a href="#contact">Contact</a></li>
+				<li><a href="#about">About</a></li>
             </ul>
         </nav>
         </div>
         <div class="contents">
         <h1>CONTENTS</h1>
         </div>
+		<div class="w3-content w3-section" style="max-width:500px">
+			<img class="mySlides" src="img_la.jpg" style="width:100%">
+			<img class="mySlides" src="img_ny.jpg" style="width:100%">
+			<img class="mySlides" src="img_chicago.jpg" style="width:100%">
+		</div>
+		
         </body>
-
         </html>
