--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                     <img src  ="contents/logo.jpg" alt="LOGOSTELA" width= 200 height = 200>  
                 </div>
 				<li><a href="#home">Home</a></li>
-				<li><a href="#news">News</a></li>
+				<li><a href="#news">News and Events</a></li>
 				<li><a href="#contact">Contact</a></li>
-				<li><a href="#about">About</a></li>
+				<li><a href="#about">About Us</a></li>
             </ul>
         </nav>
         </div>
